# iconic-measure

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  _defines_8h_source.html  _geometry_8h_source.html  _image_canvas_8h_source.html  _measure_event_8h_source.html  _measure_handler_8h_source.html  _open_c_l_grid_8h_source.html  _video_player_app_8h_source.html  _video_player_frame_8h_source.html  annotated.html  annotated_dup.js  class_iconic_measure_app-members.html  class_iconic_measure_app.html  class_iconic_measure_app.js  class_measure_event-members.html  class_measure_event.html  class_measure_event.js  classes.html  classiconic_1_1_geometry-members.html  classiconic_1_1_geometry.html  classiconic_1_1_geometry.js  classiconic_1_1_image_canvas-members.html  classiconic_1_1_image_canvas.html  classiconic_1_1_image_canvas.js  classiconic_1_1_measure_handler-members.html  classiconic_1_1_measure_handler.html  classiconic_1_1_measure_handler.js  classiconic_1_1common_1_1_open_c_l_dialog-members.html  classiconic_1_1common_1_1_open_c_l_dialog.html  classiconic_1_1common_1_1_open_c_l_dialog.js  classiconic_1_1common_1_1_open_c_l_grid-members.html  classiconic_1_1common_1_1_open_c_l_grid.html  classiconic_1_1common_1_1_open_c_l_grid.js  dir_4f7e0a0531c59b89f394db09b56fa2b6.html  dir_4f7e0a0531c59b89f394db09b56fa2b6.js  dir_ca79ca0b44a8548ffe32574f3ab95911.html  dir_ca79ca0b44a8548ffe32574f3ab95911.js  (+27 more)
doc/: iconic-measure.doxygen
img/: delete.xpm  line.xpm  move.xpm  point.xpm  polygon.xpm
include/IconicMeasureCommon/: ColorBox.h  DataUpdateEvent.h  Defines.h  DrawEvent.h  Geometry.h  IconicMeasureHandler.h  ImageCanvas.h  MeasureEvent.h  MeasureHandler.h  OpenCLGrid.h  Shape.h  SidePanel.h  VideoDisplayWindow.h  VideoPlayerFrame.h  exports.h
include/VideoDisplay/: VideoPlayerApp.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js
src/IconicMeasureCommon/: CMakeLists.txt  ColorBox.cpp  DataUpdateEvent.cpp  DrawEvent.cpp  Geometry.cpp  IconicMeasureHandler.cpp  ImageCanvas.cpp  MeasureEvent.cpp  MeasureHandler.cpp  OpenCLGrid.cpp  Shape.cpp  SidePanel.cpp  VideoDisplayWindow.cpp  VideoPlayerFrame.cpp
src/VideoDisplay/: CMakeLists.txt  VideoPlayerApp.cpp
test/: CMakeLists.txt  iconic-measure-test.cpp  polygon.hpp  triangulate.hpp
